--- a/backend/api/templates/cancelConfirm.html
+++ b/backend/api/templates/cancelConfirm.html
@@ -92,7 +92,7 @@
       type="hidden"
       name="tongtienhoadon"
       id="tongtienhoadon"
-      value="{{ wedding.tongtiendattiec }}"
+      value="{{ wedding.tongtienhoadon }}"
     />
     <input
       type="hidden"
@@ -122,7 +122,7 @@
         <tbody>
           <tr>
             <td>Tổng tiền hoá đơn:</td>
-            <td>{{wedding.tongtien|intcomma }}</td>
+            <td>{{wedding.tongtienhoadon|intcomma }}</td>
           </tr>
           <tr>
             <td>Tiền cọc (50%):</td>
