--- a/backend/api/templates/invoicePDF_invoicePayment.html
+++ b/backend/api/templates/invoicePDF_invoicePayment.html
@@ -126,7 +126,7 @@
                 <td colspan="4" class="text-right">
                     <strong>Tiền cọc:</strong>
                 </td>
-                <td>-{{ bookingDetails.tongtienban|floatformat:2|intcomma }}</td>
+                <td>-{{ bookingDetails.tiendatcoc|floatformat:2|intcomma }}</td>
             </tr>
             <tr>
                 <td colspan="4" class="text-right">
