--- a/backend/api/templates/search.html
+++ b/backend/api/templates/search.html
@@ -2,7 +2,7 @@
 {% load mathfilters %} {% load humanize %} {% csrf_token %}
 <style>
   #searchResult{
-    height: 100vh;
+    height: 600px;
     overflow: scroll;
   }
 </style>
