--- a/backend/api/templates/searchResult.html
+++ b/backend/api/templates/searchResult.html
@@ -79,13 +79,22 @@
                     Chỉnh sửa
                   </button>
                   <button type="button" class="btn btn-outline-secondary save-button" id="saveButton" style="display: none">Lưu</button>
+                  {% if wedding.payment_day %}
                   <a href="{% url 'paymentConfirm' wedding.matieccuoi %}" class="btn btn-primary">Thanh toán</a>
+                  {% endif %}
+                  {% if wedding.cancel_day %}
                   <a href="{% url 'cancelConfirm' wedding.matieccuoi %}" class="btn btn-danger" >Hủy</a>
+                  {% endif %}
                   {% else %}
-                    <a href="{% url 'paymentConfirm' wedding.matieccuoi %}" class="btn btn-primary">Thanh toán</a>
-                    <!-- Hiển thị thông báo trước khi hủy  -->
-                    <a href="#" class="btn btn-danger" onclick="event.preventDefault(); if (confirm('Bạn có chắc chắn muốn hủy tiệc cưới này không? Vì ngày đãi tiệc chỉ còn 7 ngày, nếu hủy sẽ mất tiền cọc và toàn bộ tổng tiền bàn ')) { window.location.href = '{% url 'cancelConfirm' wedding.matieccuoi %}'; }">Hủy</a>
+                  {% if wedding.payment_day %}
+                  <a href="{% url 'paymentConfirm' wedding.matieccuoi %}" class="btn btn-primary">Thanh toán</a>
+                  {% endif %}
+                  {% if wedding.cancel_day %}
+                   <!-- Hiển thị thông báo trước khi hủy  -->
+                   <a href="#" class="btn btn-danger" onclick="event.preventDefault(); if (confirm('Bạn có chắc chắn muốn hủy tiệc cưới này không? Vì ngày đãi tiệc chỉ còn 7 ngày, nếu hủy sẽ mất tiền cọc và toàn bộ tổng tiền bàn ')) { window.location.href = '{% url 'cancelConfirm' wedding.matieccuoi %}'; }">Hủy</a>
 
+                  {% endif %}
+                   
                    
                   {% endif %}
                  
