--- a/backend/api/templates/searchResult.html
+++ b/backend/api/templates/searchResult.html
@@ -139,7 +139,7 @@
             </table>
             <button type="button" id="modal-add-food" class="btn btn-primary" data-bs-toggle="modal"
               data-bs-target="#myModal" data-wedding-id="{{ wedding.matieccuoi }}">
-              Thêm món ăn
+              Chỉnh sửa món ăn
             </button>
           </div>
           <div>
@@ -176,7 +176,7 @@
             </table>
             <button type="button" id="modal-add-service" class="btn btn-primary" data-bs-toggle="modal"
               data-bs-target="#myModalService" data-wedding-id="{{ wedding.matieccuoi }}">
-              Thêm dịch vụ
+              Chỉnh sửa dịch vụ
             </button>
           </div>
         </div>
