--- a/backend/api/templates/addFoodTable.html
+++ b/backend/api/templates/addFoodTable.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 <div class="modal-content" >
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Thêm món ăn</h5>
+    <h5 class="modal-title" id="exampleModalLabel">Chỉnh sửa món ăn</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
   </div>
     <div class="modal-body">
@@ -78,7 +78,7 @@
       </table>
     </div>
     <div class="modal-footer">
-      <button type="button" id="addFoodDetailButton" class="btn btn-primary" >Thêm</button>
+      <button type="button" id="addFoodDetailButton" class="btn btn-primary" >Lưu</button>
       <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
     </div>
 
