--- a/backend/api/templates/addServiceTable.html
+++ b/backend/api/templates/addServiceTable.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 <div class="modal-content" >
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Thêm dịch vụ</h5>
+    <h5 class="modal-title" id="exampleModalLabel">Chỉnh sửa dịch vụ</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
   </div>
     <div class="modal-body">
@@ -45,7 +45,7 @@
       </table>
     </div>
     <div class="modal-footer">
-      <button type="button" id="addServiceDetailButton" class="btn btn-primary" >Thêm</button>
+      <button type="button" id="addServiceDetailButton" class="btn btn-primary" >Chỉnh sửa</button>
       <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Hủy</button>
     </div>
 
